--- a/app_frontend/package.json
+++ b/app_frontend/package.json
@@ -12,7 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "clsx": "^2.1.1",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
